--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ button.secondary:hover{
     <button id="solve" class="secondary" type="button">Näytä ratkaisu</button>
     <button id="install" class="secondary" type="button" hidden>Asenna</button>
   </div>
-  <div class="small">©JR. Alkuperäinen idea Nob Yoshigahara.</div>
+  <div class="small">2025©JR. Alkuperäinen idea Nob Yoshigahara.</div>
 </div>
 <div id="toast" class="toast">Ratkaistu!</div>
 
