--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <meta name="description" content="Hoppers – Nob Yoshigaharan klassinen sammakkopeli. Ratkaise pulma ja jätä jäljelle vain punainen sammakko!">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
 <meta property="og:image" content="https://ymouse91.github.io/hoppers/icon-512.png">
 <meta name="msapplication-starturl" content="./">
 <title>Hoppers</title>
